--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <div>dou第一次提交</div>
     <div>dou第二次提交</div>
     <p>这是一个p</p>
-    <span>这是一个span</span>
+    <div>冲突了</div>
 </body>
 </html>
